--- a/src/components/Topbar.css
+++ b/src/components/Topbar.css
@@ -9,3 +9,31 @@
   height: 50px;
   background: linear-gradient(115deg, #ddd3d8 57.7%, black 57.7%);
 }
+
+.title__left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+}
+
+.title__left > p {
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.caught-seen {
+  display: flex;
+  align-items: center;
+}
+
+.caught,
+.seen {
+  display: flex;
+  align-items: center;
+  background: #5a5a5a;
+  border-radius: 25px;
+  margin-left: 20px;
+  padding: 0 20px;
+  color: white;
+}
